--- a/professional.html
+++ b/professional.html
@@ -43,9 +43,11 @@
 </li>
 <li><p>International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>): 2020-2021</p>
 </li>
-<li><p>Journal of Machine Learning Research (<b>JMLR</b>): 2020(1)</p>
+<li><p>Journal of Machine Learning Research (<b>JMLR</b>): 2020(1), 2021(1)</p>
 </li>
 <li><p>Machine Learning Journal (MLJ): 2017(1), 2018(1), 2019(1)</p>
+</li>
+<li><p>Transactions on Pattern Analysis and Machine Intelligence (PAMI): 2021(1)</p>
 </li>
 <li><p>International Conference on Learning Representations (ICLR): 2020-2021</p>
 </li>
@@ -119,15 +121,17 @@
 </ul>
 <p><b>Conferences</b></p>
 <ul>
-<li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2018-2020.</p>
+<li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2018-2021.</p>
 </li>
 <li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2014, 2017-2020.</p>
 </li>
 <li><p>International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>): 2019-2021.</p>
 </li>
-<li><p>International Conference on Learning Representations (ICLR): 2020-2021</p>
+<li><p>International Conference on Learning Representations (ICLR): 2020-2021.</p>
 </li>
-<li><p>Conference on Learning Theory (COLT): 2018, 2020.</p>
+<li><p>Conference on Learning Theory (COLT): 2018, 2020-2021.</p>
+</li>
+<li><p>Computer Vision and Pattern Recognition (CVPR): 2021.</p>
 </li>
 <li><p>Association for Computational Linguistics (ACL): 2020.</p>
 </li>
@@ -159,7 +163,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-05-13 09:43:37 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-07-09 10:05:15 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
