--- a/publication.html
+++ b/publication.html
@@ -72,30 +72,29 @@ Machine Learning Journal (<b>MLJ</b>), 2014. <br />
 </li>
 </ul>
 <h2>Others</h2>
-<p><b>Preprints</b></p>
-<ul>
-<li><p><a href="https://arxiv.org/pdf/1910.04483.pdf" target=&ldquo;blank&rdquo;><font color="blue">Tree-Wasserstein Barycenter for Large-Scale Multilevel Clustering and Scalable Bayes</font></a> <br />
-ArXiv. <br />
-<b>Tam Le</b><font color="red">*</font>, Viet Huynh<font color="red">*</font>, Nhat Ho<font color="red">*</font>, Dinh Phung, Makoto Yamada</p>
-</li>
-</ul>
+<p><b>Other Journals / Conference papers / Preprints</b></p>
 <ul>
 <li><p><a href="https://arxiv.org/pdf/1909.02373.pdf" target=&ldquo;blank&rdquo;><font color="blue">LSMI-Sinkhorn: Semi-supervised Squared-Loss Mutual Information Estimation with Optimal Transport</font></a> <br />
-ArXiv. <br />
+European Conference on Machine Learning and Principles & Practice of Knowledge Discovery in Databases (ECML-PKDD), 2021. (<i>Acceptance rate: 147/685 = 21.5%</i>) <br />
 Yanbin Liu<font color="red">*</font>, Makoto Yamada<font color="red">*</font>, Yao-Hung Hubert Tsai, <b>Tam Le</b>, Ruslan Salakhutdinov, Yi Yang</p>
 </li>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/pdf/2102.04014.pdf" target=&ldquo;blank&rdquo;><font color="blue">Point-set Distances for Learning Representations of 3D Point Clouds</font></a> <br />
-ArXiv. <br />
+ArXiv, 2021. <br />
 Trung Nguyen, Quang-Hieu Pham, <b>Tam Le</b>, Nhat Ho, Tung Pham, Binh-Son Hua.</p>
 </li>
 </ul>
-<p><b>Other Journals / Conference papers</b></p>
 <ul>
 <li><p><a href="https://arxiv.org/pdf/1902.09722.pdf" target=&ldquo;blank&rdquo;><font color="blue">Topological Bayesian Optimization with Persistence Diagrams</font></a> <br />
 European Conference on Artificial Intelligence (ECAI), 2020. (<i>Acceptance rate: 365/1363 = 26.8%</i>) <br />
 Tatsuya Shiraishi, <b>Tam Le</b>, Hisashi Kashima, Makoto Yamada</p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/pdf/1910.04483.pdf" target=&ldquo;blank&rdquo;><font color="blue">Tree-Wasserstein Barycenter for Large-Scale Multilevel Clustering and Scalable Bayes</font></a> <br />
+ArXiv, 2019. <br />
+<b>Tam Le</b><font color="red">*</font>, Viet Huynh<font color="red">*</font>, Nhat Ho<font color="red">*</font>, Dinh Phung, Makoto Yamada</p>
 </li>
 </ul>
 <ul>
@@ -171,7 +170,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-05-13 09:43:37 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-07-09 10:05:15 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
