--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
 <a href="TamLeANU13.jpg"><img src="TamLeANU13.jpg" alt="Tam Le" width="150px" height="178px" /></a>&nbsp;</td>
 <td align="left"><p>(a.k.a. Lê Thanh Tâm) <br />
 Postdoctoral Researcher <br />
+(upcoming <i><b><font color="blue">Research Scientist</font></b></i> from 01-August-2021) <br />
 <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>. <br /></p>
 </td></tr></table>
-<p>Research interests: Optimal transport, tree-Wasserstein geometry, geometric machine learning, Riemannian manifold, topological data analysis, kernel methods, parametric optimization, metric learning. <br /></p>
+<p>Research interests: Optimal transport, tree-Wasserstein geometry, geometric machine learning, Riemannian manifold, topological data analysis, kernel methods, robust algorithms. <br /></p>
 <h2>Contact</h2>
 <div class="infoblock">
 <div class="blockcontent">
@@ -39,27 +40,23 @@ Yoshida Honmachi, Sakyo-ku, Kyoto, 606-8501, Japan.</p>
 My CV is <a href="https://www.dropbox.com/s/c8bdlut1inof3c2/TamLe2021May.pdf?dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated May, 2021.</p>
 <h2>News</h2>
 <ul>
-<li><p>08-May-2021, Our paper, entitled <a href="https://arxiv.org/pdf/2006.07593.pdf" target=&ldquo;blank&rdquo;>&ldquo;Optimal Transport Kernels for Sequential and Parallel Neural Architecture Search&rdquo;</a> has been accepted to ICML&rsquo;21! This is joint work with Vu Nguyen, Makoto Yamada, and Michael A. Osborne.</p>
+<li><p>16-Jun-2021, I will be officially promoted to <i><b>Research Scientist</b></i> at RIKEN AIP from 01-August-2021.</p>
 </li>
-<li><p>23-Jan-2021, Two papers, entitled <a href="https://arxiv.org/pdf/2101.09756.pdf" target=&ldquo;blank&rdquo;>&ldquo;Entropy Partial Transport with Tree Metrics: Theory and Practice&rdquo;</a> (joint work with Truyen Nguyen)&#8201;&mdash;&#8201;selected for <i><b>oral</b></i> presentation&#8201;&mdash;&#8201;and <a href="https://arxiv.org/pdf/1910.04462.pdf" target=&ldquo;blank&rdquo;>&ldquo;Flow-based Alignment Approaches for Probability Measures in Different Spaces&rdquo;</a> (joint work with Nhat Ho and Makoto Yamada), have been accepted to <a href="https://aistats.org/aistats2021/" target=&ldquo;blank&rdquo;>AISTATS&rsquo;21</a>.</p>
+<li><p>08-May-2021, Our paper, entitled <a href="https://arxiv.org/pdf/2006.07593.pdf" target=&ldquo;blank&rdquo;>&ldquo;Optimal Transport Kernels for Sequential and Parallel Neural Architecture Search&rdquo;</a> has been accepted to <a href="https://icml.cc/" target=&ldquo;blank&rdquo;><b>ICML&rsquo;21</b></a>! This is joint work with Vu Nguyen, Makoto Yamada, and Michael A. Osborne.</p>
+</li>
+<li><p>23-Jan-2021, Two papers, entitled <a href="https://arxiv.org/pdf/2101.09756.pdf" target=&ldquo;blank&rdquo;>&ldquo;Entropy Partial Transport with Tree Metrics: Theory and Practice&rdquo;</a> (joint work with Truyen Nguyen)&#8201;&mdash;&#8201;selected for <i><b>oral</b></i> presentation&#8201;&mdash;&#8201;and <a href="https://arxiv.org/pdf/1910.04462.pdf" target=&ldquo;blank&rdquo;>&ldquo;Flow-based Alignment Approaches for Probability Measures in Different Spaces&rdquo;</a> (joint work with Nhat Ho and Makoto Yamada), have been accepted to <a href="https://aistats.org/aistats2021/" target=&ldquo;blank&rdquo;><b>AISTATS&rsquo;21</b></a>.</p>
 </li>
 <li><p>23-Jan-2021, <a href="https://www.dropbox.com/s/6tpdgjy7nqp93gq/TamLe_TW_RIKEN%20Open%20Seminar_FINAL_2021.pdf?dl=0" target=&ldquo;blank&rdquo;>Slides</a> for my presentation (An Introduction on Tree-(Sliced)-Wasserstein Geometry) at RIKEN AIP Open Seminar Series, Virtual.</p>
 </li>
 <li><p>05-Apr-2020, Our proposal has been accepted by the Grants-in-Aid for Young Scientists as PI (04/2020 - 03/2023).</p>
 </li>
-<li><p>26-Oct-2019, Matlab code for tree-(sliced)-Wasserstein distance in our <a href="https://neurips.cc/" target=&ldquo;blank&rdquo;>NeurIPS&rsquo;19</a> (<a href="https://arxiv.org/pdf/1902.00342.pdf" target=&ldquo;blank&rdquo;>Tree-Sliced Variants of Wasserstein Distances</a>) is available <a href="https://github.com/lttam/TreeWasserstein" target=&ldquo;blank&rdquo;>[Github]</a>.  </p>
-</li>
-<li><p>04-Sep-2019, Our paper, entitled <a href="https://arxiv.org/pdf/1902.00342.pdf" target=&ldquo;blank&rdquo;>&ldquo;Tree-Sliced Variants of Wasserstein Distances&rdquo;</a> has been accepted to <a href="https://nips.cc" target=&ldquo;blank&rdquo;>NeurIPS&rsquo;19</a>! This is joint work with Marco Cuturi, Kenji Fukumizu, and Makoto Yamada.  </p>
+<li><p>04-Sep-2019, Our paper, entitled <a href="https://arxiv.org/pdf/1902.00342.pdf" target=&ldquo;blank&rdquo;>&ldquo;Tree-Sliced Variants of Wasserstein Distances&rdquo;</a> has been accepted to <a href="https://nips.cc" target=&ldquo;blank&rdquo;><b>NeurIPS&rsquo;19</b></a>! This is joint work with Marco Cuturi, Kenji Fukumizu, and Makoto Yamada.  </p>
 </li>
 <li><p>11-Jul-2019, <a href="https://www.dropbox.com/s/gejiyhbjfcpfk4t/2019July_TDA_GeometricKernel.pdf?dl=0" target=&ldquo;blank&rdquo;>Slides</a> for my presentation (Kernel methods for Persistence Diagrams: A Geometric Approach) at Institute for Advanced Study, Kyoto University.</p>
 </li>
-<li><p>25-Apr-2019, Python code for our <a href="https://icml.cc/" target=&ldquo;blank&rdquo;>ICML&rsquo;19</a> (Safe Grid Search with Optimal Complexity) is available <a href="https://github.com/lttam/safe_grid_search" target=&ldquo;blank&rdquo;>[Github]</a>, coded by Eugene Ndiaye.</p>
+<li><p>22-Apr-2019, Our paper, entitled <a href="https://arxiv.org/pdf/1810.05471.pdf" target=&ldquo;blank&rdquo;>&ldquo;Safe Grid Search with Optimal Complexity&rdquo;</a> has been accepted to <a href="https://icml.cc/" target=&ldquo;blank&rdquo;><b>ICML&rsquo;19</b></a>. This is joint work with Eugene Ndiaye, Olivier Fercoq, Joseph Salmon and Ichiro Takeuchi.</p>
 </li>
-<li><p>22-Apr-2019, Our paper, entitled <a href="https://arxiv.org/pdf/1810.05471.pdf" target=&ldquo;blank&rdquo;>&ldquo;Safe Grid Search with Optimal Complexity&rdquo;</a> has been accepted to <a href="https://icml.cc/" target=&ldquo;blank&rdquo;>ICML&rsquo;19</a>. This is joint work with Eugene Ndiaye, Olivier Fercoq, Joseph Salmon and Ichiro Takeuchi.</p>
-</li>
-<li><p>19-Oct-2018, Matlab code v0.1 for Persistence Fisher distance (Fisher information metric between two persistence diagrams with or without Fast Gauss Transform) is available <a href="https://github.com/lttam/PersistenceFisher" target=&ldquo;blank&rdquo;>[Github]</a>.</p>
-</li>
-<li><p>05-Sep-2018, Our paper, entitled <a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams.pdf" target=&ldquo;blank&rdquo;>&ldquo;Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams&rdquo;</a> has been accepted to <a href="https://nips.cc" target=&ldquo;blank&rdquo;>NeurIPS&rsquo;18</a>!  </p>
+<li><p>05-Sep-2018, Our paper, entitled <a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams.pdf" target=&ldquo;blank&rdquo;>&ldquo;Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams&rdquo;</a> has been accepted to <a href="https://nips.cc" target=&ldquo;blank&rdquo;><b>NeurIPS&rsquo;18</b></a>!  </p>
 </li>
 <li><p>01-Sep-2017, Joined in High-Dimensional Statistical Modeling Team, RIKEN AIP as a postdoctoral researcher.</p>
 </li>
@@ -87,7 +84,12 @@ My CV is <a href="https://www.dropbox.com/s/c8bdlut1inof3c2/TamLe2021May.pdf?dl=
 </ul>
 <h2>Research Experience</h2>
 <ul>
-<li><p>09/2017 - present, Postdoctoral Researcher, <a href="http://www.riken.jp/en/research/labs/aip/generic_tech/highdim_stat_model/" target=&ldquo;blank&rdquo;>High-Dimensional Statistical Modeling Team</a>, <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>.</p>
+<li><p>08/2021 - , Research Scientist, <a href="http://www.riken.jp/en/research/labs/aip/generic_tech/highdim_stat_model/" target=&ldquo;blank&rdquo;>High-Dimensional Statistical Modeling Team</a>, <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>.</p>
+<ul>
+<li><p>Mentor: <a href="https://riken-yamada.github.io/profile.html" target=&ldquo;blank&rdquo;>Professor Makoto Yamada</a></p>
+</li></ul>
+</li>
+<li><p>09/2017 - 07/2021, Postdoctoral Researcher, <a href="http://www.riken.jp/en/research/labs/aip/generic_tech/highdim_stat_model/" target=&ldquo;blank&rdquo;>High-Dimensional Statistical Modeling Team</a>, <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>.</p>
 <ul>
 <li><p>Mentor: <a href="https://riken-yamada.github.io/profile.html" target=&ldquo;blank&rdquo;>Professor Makoto Yamada</a></p>
 </li></ul>
@@ -113,7 +115,7 @@ My CV is <a href="https://www.dropbox.com/s/c8bdlut1inof3c2/TamLe2021May.pdf?dl=
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-05-13 09:43:37 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-07-09 10:05:15 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
