--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <a href="TamLeANU13.jpg"><img src="TamLeANU13.jpg" alt="Tam Le" width="150px" height="178px" /></a>&nbsp;</td>
 <td align="left"><p>(a.k.a. Lê Thanh Tâm) <br />
 Postdoctoral Researcher <br />
-(upcoming <i><b><font color="blue">Research Scientist</font></b></i> from 01-August-2021) <br />
+(upcoming <i><font color="blue">Research Scientist</font></i> from 01-August-2021) <br />
 <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>. <br /></p>
 </td></tr></table>
 <p>Research interests: Optimal transport, tree-Wasserstein geometry, geometric machine learning, Riemannian manifold, topological data analysis, kernel methods, robust algorithms. <br /></p>
@@ -40,7 +40,7 @@ Yoshida Honmachi, Sakyo-ku, Kyoto, 606-8501, Japan.</p>
 My CV is <a href="https://www.dropbox.com/s/c8bdlut1inof3c2/TamLe2021May.pdf?dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated May, 2021.</p>
 <h2>News</h2>
 <ul>
-<li><p>16-Jun-2021, I will be officially promoted to <i><b>Research Scientist</b></i> at RIKEN AIP from 01-August-2021.</p>
+<li><p>16-Jun-2021, I will be officially promoted to <i>Research Scientist</i> at RIKEN AIP from 01-August-2021.</p>
 </li>
 <li><p>08-May-2021, Our paper, entitled <a href="https://arxiv.org/pdf/2006.07593.pdf" target=&ldquo;blank&rdquo;>&ldquo;Optimal Transport Kernels for Sequential and Parallel Neural Architecture Search&rdquo;</a> has been accepted to <a href="https://icml.cc/" target=&ldquo;blank&rdquo;><b>ICML&rsquo;21</b></a>! This is joint work with Vu Nguyen, Makoto Yamada, and Michael A. Osborne.</p>
 </li>
@@ -115,7 +115,7 @@ My CV is <a href="https://www.dropbox.com/s/c8bdlut1inof3c2/TamLe2021May.pdf?dl=
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-07-09 10:05:15 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-07-09 10:07:59 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
