--- a/professional.html
+++ b/professional.html
@@ -131,6 +131,8 @@
 </li>
 <li><p>Conference on Learning Theory (COLT): 2018, 2020-2021.</p>
 </li>
+<li><p>Symposium on Theory of Computing (STOC): 2021.</p>
+</li>
 <li><p>Computer Vision and Pattern Recognition (CVPR): 2021.</p>
 </li>
 <li><p>Association for Computational Linguistics (ACL): 2020.</p>
@@ -163,7 +165,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-07-09 10:07:59 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-07-09 10:12:40 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
