--- a/publication.html
+++ b/publication.html
@@ -74,20 +74,20 @@ Machine Learning Journal (<b>MLJ</b>), 2014. <br />
 <h2>Others</h2>
 <p><b>Other Journals / Conference papers / Preprints</b></p>
 <ul>
-<li><p><a href="https://arxiv.org/pdf/1909.02373.pdf" target=&ldquo;blank&rdquo;><font color="blue">LSMI-Sinkhorn: Semi-supervised Squared-Loss Mutual Information Estimation with Optimal Transport</font></a> <br />
-European Conference on Machine Learning and Principles & Practice of Knowledge Discovery in Databases (ECML-PKDD), 2021. (<i>Acceptance rate: 147/685 = 21.5%</i>) <br />
-Yanbin Liu<font color="red">*</font>, Makoto Yamada<font color="red">*</font>, Yao-Hung Hubert Tsai, <b>Tam Le</b>, Ruslan Salakhutdinov, Yi Yang</p>
-</li>
-</ul>
-<ul>
 <li><p><a href="https://arxiv.org/pdf/2102.04014.pdf" target=&ldquo;blank&rdquo;><font color="blue">Point-set Distances for Learning Representations of 3D Point Clouds</font></a> <br />
-ArXiv, 2021. <br />
+International Conference on Computer Vision (<b>ICCV</b>), 2021. (<i>Acceptance rate: 1617/6236 = 25.9%</i>) <br />
 Trung Nguyen, Quang-Hieu Pham, <b>Tam Le</b>, Nhat Ho, Tung Pham, Binh-Son Hua.</p>
 </li>
 </ul>
 <ul>
+<li><p><a href="https://arxiv.org/pdf/1909.02373.pdf" target=&ldquo;blank&rdquo;><font color="blue">LSMI-Sinkhorn: Semi-supervised Squared-Loss Mutual Information Estimation with Optimal Transport</font></a> <br />
+European Conference on Machine Learning and Principles & Practice of Knowledge Discovery in Databases (<i>ECML-PKDD</i>), 2021. (<i>Acceptance rate: 147/685 = 21.5%</i>) <br />
+Yanbin Liu<font color="red">*</font>, Makoto Yamada<font color="red">*</font>, Yao-Hung Hubert Tsai, <b>Tam Le</b>, Ruslan Salakhutdinov, Yi Yang</p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/pdf/1902.09722.pdf" target=&ldquo;blank&rdquo;><font color="blue">Topological Bayesian Optimization with Persistence Diagrams</font></a> <br />
-European Conference on Artificial Intelligence (ECAI), 2020. (<i>Acceptance rate: 365/1363 = 26.8%</i>) <br />
+European Conference on Artificial Intelligence (<i>ECAI</i>), 2020. (<i>Acceptance rate: 365/1363 = 26.8%</i>) <br />
 Tatsuya Shiraishi, <b>Tam Le</b>, Hisashi Kashima, Makoto Yamada</p>
 </li>
 </ul>
@@ -105,7 +105,7 @@ Randy Jalem, Masanobu Nakayama, Yusuke Noda, <b>Tam Le</b>, Ichiro Takeuchi, Yos
 </ul>
 <ul>
 <li><p><a href="http://proceedings.mlr.press/v29/Le13.pdf" target=&ldquo;blank&rdquo;><font color="blue">Generalized Aitchison Embeddings for Histograms</font></a>. [<a href="https://799a327a-a-62cb3a1a-s-sites.googlegroups.com/site/tamtle85/acml13/TamLe_ACML13.pdf?attachauth=ANoY7co0ctNrM6IGtGy7-HUUGaF_jZNDALnhKuyeXTvrvnRFksIGZaEm5xtXaqY8o92WUlHWgomz46LrFTNuAxHpyH260KPc9qFskG75521q96T1aVUXrtSSJsMZowtTBxFO5cMtu6l4GYPQT-rsx97SfSU8QxMoGN-ik17jgZyKGNqWVINs36qZ7VDnUYopGTOi0_vMOKI5AHjMnjTEm_yWp9VdkJcA05GFzRhsNpNJqZewg222Sqo%3D&amp;attredirects=0" target=&ldquo;blank&rdquo;>SLIDE</a>] <br />
-Asian Conference on Machine Learning (ACML), 2013 (oral). (<i>Oral paper rate: 9.7%</i>) <br />
+Asian Conference on Machine Learning (<i>ACML</i>), 2013 (oral). (<i>Oral paper rate: 9.7%</i>) <br />
 <b>Tam Le</b>, Marco Cuturi</p>
 </li>
 </ul>
@@ -170,7 +170,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-07-09 10:12:40 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-07-23 15:32:39 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
