--- a/professional.html
+++ b/professional.html
@@ -32,7 +32,7 @@
 </ul>
 <p><b>Senior Program Committee</b></p>
 <ul>
-<li><p>International Joint Conference on Artificial Intelligence (IJCAI): 2021</p>
+<li><p>International Joint Conference on Artificial Intelligence (IJCAI): 2021-2022</p>
 </li>
 </ul>
 <p><b>Program Committee / Journal Reviewer</b></p>
@@ -41,19 +41,21 @@
 </li>
 <li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2019-2021</p>
 </li>
-<li><p>International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>): 2020-2021</p>
+<li><p>International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>): 2020-2022</p>
+</li>
+<li><p>International Conference on Learning Representations (<b>ICLR</b>): 2020-2022</p>
 </li>
 <li><p>Journal of Machine Learning Research (<b>JMLR</b>): 2020(1), 2021(1)</p>
+</li>
+<li><p>Discrete and Computational Geometry Journal (DCG): 2021(1) </p>
 </li>
 <li><p>Machine Learning Journal (MLJ): 2017(1), 2018(1), 2019(1)</p>
 </li>
 <li><p>Transactions on Pattern Analysis and Machine Intelligence (PAMI): 2021(1)</p>
 </li>
-<li><p>International Conference on Learning Representations (ICLR): 2020-2021</p>
-</li>
 <li><p>International Joint Conference on Artificial Intelligence (IJCAI): 2018-2020</p>
 </li>
-<li><p>AAAI Conference on Artificial Intelligence (AAAI): 2020-2021</p>
+<li><p>AAAI Conference on Artificial Intelligence (AAAI): 2020-2022</p>
 </li>
 <li><p>Conference on Computer Vision and Pattern Recognition (CVPR): 2021</p>
 </li>
@@ -72,9 +74,9 @@
 </li>
 <li><p>Machine Learning Journal (MLJ): 2018(1)</p>
 </li>
-<li><p>ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD): 2016-2017</p>
-</li>
 <li><p>AAAI Conference on Artificial Intelligence (AAAI): 2016</p>
+</li>
+<li><p>ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD): 2016-2017</p>
 </li>
 <li><p>The Web Conference (WWW): 2018-2019</p>
 </li>
@@ -127,13 +129,15 @@
 </li>
 <li><p>International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>): 2019-2021.</p>
 </li>
-<li><p>International Conference on Learning Representations (ICLR): 2020-2021.</p>
+<li><p>International Conference on Learning Representations (<b>ICLR</b>): 2020-2021.</p>
 </li>
 <li><p>Conference on Learning Theory (COLT): 2018, 2020-2021.</p>
 </li>
 <li><p>Symposium on Theory of Computing (STOC): 2021.</p>
 </li>
 <li><p>Computer Vision and Pattern Recognition (CVPR): 2021.</p>
+</li>
+<li><p>ACM Conference on Fairness, Accountability, and Transparency (FAccT): 2021.</p>
 </li>
 <li><p>Association for Computational Linguistics (ACL): 2020.</p>
 </li>
@@ -165,7 +169,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-07-31 11:45:56 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-08-18 12:05:36 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
