--- a/publication.html
+++ b/publication.html
@@ -23,20 +23,20 @@
 <p>(<font color="red">*</font>: equal contribution)</p>
 <h2>Selected Journals / Conference papers</h2>
 <ul>
-<li><p><a href="https://arxiv.org/pdf/2006.07593.pdf" target=&ldquo;blank&rdquo;><font color="blue">Optimal Transport Kernels for Sequential and Parallel Neural Architecture Search</font></a> <br />
+<li><p><a href="http://proceedings.mlr.press/v139/nguyen21d/nguyen21d.pdf" target=&ldquo;blank&rdquo;><font color="blue">Optimal Transport Kernels for Sequential and Parallel Neural Architecture Search</font></a>. [<a href="http://proceedings.mlr.press/v139/nguyen21d/nguyen21d-supp.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/nivgnbd2wjad4cp/VNTLMYMO_ICML21_NAS_BO_TW.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 International Conference on Machine Learning (<b>ICML</b>), 2021. (<i>Acceptance rate: 1184/5513=21.5%</i>) <br />
 Vu Nguyen<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font>, Makoto Yamada, Michael A. Osborne</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/pdf/2101.09756.pdf" target=&ldquo;blank&rdquo;><font color="blue">Entropy Partial Transport with Tree Metrics: Theory and Practice</font></a> <br />
+<li><p><a href="http://proceedings.mlr.press/v130/le21a/le21a.pdf" target=&ldquo;blank&rdquo;><font color="blue">Entropy Partial Transport with Tree Metrics: Theory and Practice</font></a>. [<a href="https://slideslive.com/38953421/oral-entropy-partial-transport-with-tree-metrics-theory-and-practice?ref=speaker-17801-latest" target=&ldquo;blank&rdquo;>Video</a>/<a href="http://proceedings.mlr.press/v130/le21a/le21a-supp.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/t0585d445apprx7/TamLe_ID1691_AISTATS2021_EPT_12min.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>/<a href="https://www.dropbox.com/s/uk5hzfve648gve0/TLTN_AISTATS21_EPT.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>), 2021. (<i>Oral rate: 48/1527=3.1%</i>) <br /> 
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font> <br />
 (<font color="green">This paper was selected for oral presentation.</font> Oral : acceptance : submissions = 48 : 455 : 1527)</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/pdf/1910.04462.pdf" target=&ldquo;blank&rdquo;><font color="blue">Flow-based Alignment Approaches for Probability Measures in Different Spaces</font></a> <br />
+<li><p><a href="http://proceedings.mlr.press/v130/le21b/le21b.pdf" target=&ldquo;blank&rdquo;><font color="blue">Flow-based Alignment Approaches for Probability Measures in Different Spaces</font></a> . [<a href="https://slideslive.com/38953310/flowbased-alignment-approaches-for-probability-measures-in-different-spaces?ref=speaker-17801-latest" target=&ldquo;blank&rdquo;>Video</a>/<a href="http://proceedings.mlr.press/v130/le21b/le21b-supp.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/vc09k731yh20nhv/TLNHMY_AISTATS2021_FlowAlign.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>), 2021. (<i>Acceptance rate: 455/1527=29.8%</i>) <br /> 
 <b>Tam Le</b><font color="red">*</font>, Nhat Ho<font color="red">*</font>, Makoto Yamada</p>
 </li>
@@ -170,7 +170,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-08-18 12:05:36 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-08-18 16:27:25 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
