--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@ Yoshida Honmachi, Sakyo-ku, Kyoto, 606-8501, Japan.</p>
 My CV is <a href="https://www.dropbox.com/s/l6rqx31g9o24n21/TamLe-CV-2021Aug.pdf?dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated August, 2021.</p>
 <h2>News</h2>
 <ul>
+<li><p>29-Sep-2021, Our paper, entitled <a href="to-be-available-soon" target=&ldquo;blank&rdquo;><font>"Adversarial Regression with Doubly Non-negative Weighting Matrices"</font></a>, has been accepted to <b>NeurIPS&rsquo;21</b>! This is joint work with Truyen Nguyen, Makoto Yamada, Jose Blanchet, and Viet Anh Nguyen.</p>
+</li>
 <li><p>16-Jun-2021, I will be officially promoted to <i>Research Scientist</i> at RIKEN AIP from 01-Aug-2021.</p>
 </li>
 <li><p>08-May-2021, Our paper, entitled <a href="https://arxiv.org/pdf/2006.07593.pdf" target=&ldquo;blank&rdquo;>&ldquo;Optimal Transport Kernels for Sequential and Parallel Neural Architecture Search&rdquo;</a> has been accepted to <a href="https://icml.cc/" target=&ldquo;blank&rdquo;><b>ICML&rsquo;21</b></a>! This is joint work with Vu Nguyen, Makoto Yamada, and Michael A. Osborne.</p>
@@ -114,7 +116,7 @@ My CV is <a href="https://www.dropbox.com/s/l6rqx31g9o24n21/TamLe-CV-2021Aug.pdf
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-08-18 16:27:25 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-09-29 16:23:41 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
