--- a/publication.html
+++ b/publication.html
@@ -23,6 +23,12 @@
 <p>(<font color="red">*</font>: equal contribution)</p>
 <h2>Selected Journals / Conference papers</h2>
 <ul>
+<li><p><a href="to-be-available-soon" target=&ldquo;blank&rdquo;><font color="blue">Adversarial Regression with Doubly Non-negative Weighting Matrices</font></a>. <br />
+Neural Information Processing Systems (<b>NeurIPS/NIPS</b>), 2021. (<i>Acceptance rate: 26.0% from 9122 submissions</i>) <br />
+<b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Makoto Yamada, Jose Blanchet, Viet Anh Nguyen</p>
+</li>
+</ul>
+<ul>
 <li><p><a href="http://proceedings.mlr.press/v139/nguyen21d/nguyen21d.pdf" target=&ldquo;blank&rdquo;><font color="blue">Optimal Transport Kernels for Sequential and Parallel Neural Architecture Search</font></a>. [<a href="http://proceedings.mlr.press/v139/nguyen21d/nguyen21d-supp.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/nivgnbd2wjad4cp/VNTLMYMO_ICML21_NAS_BO_TW.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 International Conference on Machine Learning (<b>ICML</b>), 2021. (<i>Acceptance rate: 1184/5513=21.5%</i>) <br />
 Vu Nguyen<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font>, Makoto Yamada, Michael A. Osborne</p>
@@ -170,7 +176,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-08-18 16:27:25 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-09-29 16:23:41 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
