--- a/code.html
+++ b/code.html
@@ -21,13 +21,48 @@
 <h1>Tam Le - Code &amp; Datasets</h1>
 </div>
 <ul>
-<li><p><a href="https://github.com/lttam/TreeWasserstein" target=&ldquo;blank&rdquo;>Tree-(Sliced)-Wasserstein Distances (A Valid Positive Definite Wasserstein Kernel for Persistence Diagrams)</a>. (NeurIPS/NIPS 2019)</p>
+<li><p><a href="https://github.com/lttam/Adversarial-Regression" target=&ldquo;blank&rdquo;>Adversarial Regression with Doubly Non-negative Weighting Matrices</a>. (NeurIPS 2021)</p>
+<ul>
+<li><p>An adversarial regression (e.g., for Nadaraya-Watson, for locally linear regression, for support vector regression).</p>
+</li></ul>
 </li>
-<li><p><a href="https://github.com/lttam/Kmeans-FlowTreeGW-Barycenter" target=&ldquo;blank&rdquo;>Kmeans with Flow-based Tree Gromov-Wasserstein Barycenters</a>. (ArXiv 2019)</p>
+<li><p><a href="https://github.com/lttam/EntropyPartialTransport" target=&ldquo;blank&rdquo;>Entropy Partial Transport with Tree Metric</a>. (AISTATS 2021)</p>
+<ul>
+<li><p>An unbalanced version of Tree-(Sliced)-Wasserstein for probability measures with different total mass.</p>
+</li>
+<li><p>A valid positive definite kernel for persistence diagrams (which can have different numbers of topological features, e.g., connected components, rings).</p>
+</li></ul>
+</li>
+<li><p><a href="https://github.com/lttam/FlowBasedAlignment-GW" target=&ldquo;blank&rdquo;>Flow-based Alignment Approaches for Probability Measures in Different Spaces</a>. (AISTATS 2021)</p>
+<ul>
+<li><p>A variant of Gromov-Wasserstein with tree metrics.</p>
+</li></ul>
+</li>
+<li><p><a href="https://github.com/lttam/TW_NAS" target=&ldquo;blank&rdquo;>Optimal Transport Kernels for Sequential and Parallel Neural Architecture Search</a>. (ICML 2021)</p>
+<ul>
+<li><p>Implemented by Vu Nguyen.</p>
+</li></ul>
+</li>
+<li><p><a href="https://github.com/lttam/LSMI-Sinkhorn" target=&ldquo;blank&rdquo;>LSMI-Sinkhorn</a>. (ECML-PKDD 2021)</p>
+<ul>
+<li><p>Implemented by Yanbin Liu and Makoto Yamada.</p>
+</li></ul>
+</li>
+<li><p><a href="https://github.com/lttam/TreeWasserstein" target=&ldquo;blank&rdquo;>Tree-(Sliced)-Wasserstein Distances</a>. (NeurIPS/NIPS 2019)</p>
+<ul>
+<li><p>A Valid Positive Definite Wasserstein Kernel for Persistence Diagrams.
+</p>
+</li></ul>
 </li>
 <li><p><a href="https://github.com/lttam/safe_grid_search" target=&ldquo;blank&rdquo;>Safe Grid Search with Optimal Complexity</a>. (ICML 2019)</p>
+<ul>
+<li><p>Implemented by Eugene Ndiaye.</p>
+</li></ul>
 </li>
-<li><p><a href="https://github.com/lttam/PersistenceFisher" target=&ldquo;blank&rdquo;>Persistence Fisher distance (Fisher information metric between two persistence diagrams) with or without Fast Gauss Transform</a>. (NeurIPS/NIPS 2018)</p>
+<li><p><a href="https://github.com/lttam/PersistenceFisher" target=&ldquo;blank&rdquo;>Persistence Fisher distance with or without Fast Gauss Transform</a>. (NeurIPS/NIPS 2018)</p>
+<ul>
+<li><p>Fisher information metric between two persistence diagrams.</p>
+</li></ul>
 </li>
 <li><p><a href="https://github.com/lttam/GenAitEmb" target=&ldquo;blank&rdquo;>Generalized Aitchison Embeddings for Histograms</a>. (ACML 2013 &amp; MLJ 2014)</p>
 </li>
@@ -46,7 +81,7 @@
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-09-29 16:23:41 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-11-21 23:58:14 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
