--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@ Graduate School of Informatics, Kyoto University <br />
 Yoshida Honmachi, Sakyo-ku, Kyoto, 606-8501, Japan.</p>
 </div></div>
 <p>Email: tam.le[<i>at</i>]riken.jp or lttam.vn[<i>at</i>]gmail.com <br />
-My CV is <a href="https://www.dropbox.com/s/l6rqx31g9o24n21/TamLe-CV-2021Aug.pdf?dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated August, 2021.</p>
+My CV is <a href="https://www.dropbox.com/s/1jrgtiaredl1z8b/TamLe-CV-2021Nov.pdf?dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated November, 2021.</p>
 <h2>News</h2>
 <ul>
-<li><p>29-Sep-2021, Our paper, entitled <a href="to-be-available-soon" target=&ldquo;blank&rdquo;><font>"Adversarial Regression with Doubly Non-negative Weighting Matrices"</font></a>, has been accepted to <b>NeurIPS&rsquo;21</b>! This is joint work with Truyen Nguyen, Makoto Yamada, Jose Blanchet, and Viet Anh Nguyen.</p>
+<li><p>29-Sep-2021, Our paper, entitled <a href="https://arxiv.org/pdf/2109.14875.pdf" target=&ldquo;blank&rdquo;><font>"Adversarial Regression with Doubly Non-negative Weighting Matrices"</font></a>, has been accepted to <b>NeurIPS&rsquo;21</b>! This is joint work with Truyen Nguyen, Makoto Yamada, Jose Blanchet, and Viet Anh Nguyen.</p>
 </li>
 <li><p>16-Jun-2021, I will be officially promoted to <i>Research Scientist</i> at RIKEN AIP from 01-Aug-2021.</p>
 </li>
@@ -85,12 +85,12 @@ My CV is <a href="https://www.dropbox.com/s/l6rqx31g9o24n21/TamLe-CV-2021Aug.pdf
 </ul>
 <h2>Research Experience</h2>
 <ul>
-<li><p>08/2021 - , Research Scientist, <a href="http://www.riken.jp/en/research/labs/aip/generic_tech/highdim_stat_model/" target=&ldquo;blank&rdquo;>High-Dimensional Statistical Modeling Team</a>, <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>.</p>
+<li><p>08/2021 - present, Research Scientist, <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>.</p>
 <ul>
 <li><p>Mentor: <a href="https://riken-yamada.github.io/profile.html" target=&ldquo;blank&rdquo;>Professor Makoto Yamada</a></p>
 </li></ul>
 </li>
-<li><p>09/2017 - 07/2021, Postdoctoral Researcher, <a href="http://www.riken.jp/en/research/labs/aip/generic_tech/highdim_stat_model/" target=&ldquo;blank&rdquo;>High-Dimensional Statistical Modeling Team</a>, <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>.</p>
+<li><p>09/2017 - 07/2021, Postdoctoral Researcher, <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>.</p>
 <ul>
 <li><p>Mentor: <a href="https://riken-yamada.github.io/profile.html" target=&ldquo;blank&rdquo;>Professor Makoto Yamada</a></p>
 </li></ul>
@@ -116,7 +116,7 @@ My CV is <a href="https://www.dropbox.com/s/l6rqx31g9o24n21/TamLe-CV-2021Aug.pdf
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-09-29 16:23:41 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-11-21 23:58:14 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
