--- a/publication.html
+++ b/publication.html
@@ -23,7 +23,7 @@
 <p>(<font color="red">*</font>: equal contribution)</p>
 <h2>Selected Journals / Conference papers</h2>
 <ul>
-<li><p><a href="to-be-available-soon" target=&ldquo;blank&rdquo;><font color="blue">Adversarial Regression with Doubly Non-negative Weighting Matrices</font></a>. <br />
+<li><p><a href="https://arxiv.org/pdf/2109.14875.pdf" target=&ldquo;blank&rdquo;><font color="blue">Adversarial Regression with Doubly Non-negative Weighting Matrices</font></a>. <br />
 Neural Information Processing Systems (<b>NeurIPS/NIPS</b>), 2021. (<i>Acceptance rate: 26.0% from 9122 submissions</i>) <br />
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Makoto Yamada, Jose Blanchet, Viet Anh Nguyen</p>
 </li>
@@ -176,7 +176,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-09-29 16:23:41 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-11-21 23:58:14 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
