--- a/code.html
+++ b/code.html
@@ -24,6 +24,8 @@
 <li><p><a href="https://github.com/lttam/Adversarial-Regression" target=&ldquo;blank&rdquo;>Adversarial Regression with Doubly Non-negative Weighting Matrices</a>. (NeurIPS 2021)</p>
 <ul>
 <li><p>An adversarial regression (e.g., for Nadaraya-Watson, for locally linear regression, for support vector regression).</p>
+</li>
+<li><p>Implemented by TL and Viet Anh Nguyen.</p>
 </li></ul>
 </li>
 <li><p><a href="https://github.com/lttam/EntropyPartialTransport" target=&ldquo;blank&rdquo;>Entropy Partial Transport with Tree Metric</a>. (AISTATS 2021)</p>
@@ -40,7 +42,7 @@
 </li>
 <li><p><a href="https://github.com/lttam/TW_NAS" target=&ldquo;blank&rdquo;>Optimal Transport Kernels for Sequential and Parallel Neural Architecture Search</a>. (ICML 2021)</p>
 <ul>
-<li><p>Implemented by Vu Nguyen.</p>
+<li><p>Implemented by Vu Nguyen. (Partially by TL &ndash;  tree-Wasserstein for neural networks)</p>
 </li></ul>
 </li>
 <li><p><a href="https://github.com/lttam/LSMI-Sinkhorn" target=&ldquo;blank&rdquo;>LSMI-Sinkhorn</a>. (ECML-PKDD 2021)</p>
@@ -48,7 +50,7 @@
 <li><p>Implemented by Yanbin Liu and Makoto Yamada.</p>
 </li></ul>
 </li>
-<li><p><a href="https://github.com/lttam/TreeWasserstein" target=&ldquo;blank&rdquo;>Tree-(Sliced)-Wasserstein Distances</a>. (NeurIPS/NIPS 2019)</p>
+<li><p><a href="https://github.com/lttam/TreeWasserstein" target=&ldquo;blank&rdquo;>Tree-(Sliced)-Wasserstein Distances</a>. (NeurIPS 2019)</p>
 <ul>
 <li><p>A Valid Positive Definite Wasserstein Kernel for Persistence Diagrams.
 </p>
@@ -81,7 +83,7 @@
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-11-21 23:58:14 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-12-15 14:51:28 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
