--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@ Yoshida Honmachi, Sakyo-ku, Kyoto, 606-8501, Japan.</p>
 My CV is <a href="https://www.dropbox.com/s/1jrgtiaredl1z8b/TamLe-CV-2021Nov.pdf?dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated November, 2021.</p>
 <h2>News</h2>
 <ul>
+<li><p>2022, I will give an invited talk at the upcoming AAAI workshop (<a href="https://ot-sdm.github.io/" target=&ldquo;blank&rdquo;>OT-SDM: International Workshop on Optimal Transport and Structured Data Modeling</a>).</p>
+</li>
 <li><p>29-Sep-2021, Our paper, entitled <a href="https://arxiv.org/pdf/2109.14875.pdf" target=&ldquo;blank&rdquo;><font>"Adversarial Regression with Doubly Non-negative Weighting Matrices"</font></a>, has been accepted to <b>NeurIPS&rsquo;21</b>! This is joint work with Truyen Nguyen, Makoto Yamada, Jose Blanchet, and Viet Anh Nguyen.</p>
 </li>
 <li><p>16-Jun-2021, I will be officially promoted to <i>Research Scientist</i> at RIKEN AIP from 01-Aug-2021.</p>
@@ -47,13 +49,9 @@ My CV is <a href="https://www.dropbox.com/s/1jrgtiaredl1z8b/TamLe-CV-2021Nov.pdf
 </li>
 <li><p>23-Jan-2021, Two papers, entitled <a href="https://arxiv.org/pdf/2101.09756.pdf" target=&ldquo;blank&rdquo;>&ldquo;Entropy Partial Transport with Tree Metrics: Theory and Practice&rdquo;</a> (joint work with Truyen Nguyen)&#8201;&mdash;&#8201;selected for <i><b>oral</b></i> presentation&#8201;&mdash;&#8201;and <a href="https://arxiv.org/pdf/1910.04462.pdf" target=&ldquo;blank&rdquo;>&ldquo;Flow-based Alignment Approaches for Probability Measures in Different Spaces&rdquo;</a> (joint work with Nhat Ho and Makoto Yamada), have been accepted to <a href="https://aistats.org/aistats2021/" target=&ldquo;blank&rdquo;><b>AISTATS&rsquo;21</b></a>.</p>
 </li>
-<li><p>23-Jan-2021, <a href="https://www.dropbox.com/s/6tpdgjy7nqp93gq/TamLe_TW_RIKEN%20Open%20Seminar_FINAL_2021.pdf?dl=0" target=&ldquo;blank&rdquo;>Slides</a> for my presentation (An Introduction on Tree-(Sliced)-Wasserstein Geometry) at RIKEN AIP Open Seminar Series, Virtual.</p>
-</li>
 <li><p>05-Apr-2020, Our proposal has been accepted by the Grants-in-Aid for Young Scientists as PI (04/2020 - 03/2023).</p>
 </li>
 <li><p>04-Sep-2019, Our paper, entitled <a href="https://arxiv.org/pdf/1902.00342.pdf" target=&ldquo;blank&rdquo;>&ldquo;Tree-Sliced Variants of Wasserstein Distances&rdquo;</a> has been accepted to <a href="https://nips.cc" target=&ldquo;blank&rdquo;><b>NeurIPS&rsquo;19</b></a>! This is joint work with Marco Cuturi, Kenji Fukumizu, and Makoto Yamada.  </p>
-</li>
-<li><p>11-Jul-2019, <a href="https://www.dropbox.com/s/gejiyhbjfcpfk4t/2019July_TDA_GeometricKernel.pdf?dl=0" target=&ldquo;blank&rdquo;>Slides</a> for my presentation (Kernel methods for Persistence Diagrams: A Geometric Approach) at Institute for Advanced Study, Kyoto University.</p>
 </li>
 <li><p>22-Apr-2019, Our paper, entitled <a href="https://arxiv.org/pdf/1810.05471.pdf" target=&ldquo;blank&rdquo;>&ldquo;Safe Grid Search with Optimal Complexity&rdquo;</a> has been accepted to <a href="https://icml.cc/" target=&ldquo;blank&rdquo;><b>ICML&rsquo;19</b></a>. This is joint work with Eugene Ndiaye, Olivier Fercoq, Joseph Salmon and Ichiro Takeuchi.</p>
 </li>
@@ -116,7 +114,7 @@ My CV is <a href="https://www.dropbox.com/s/1jrgtiaredl1z8b/TamLe-CV-2021Nov.pdf
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-11-21 23:58:14 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-12-15 14:51:28 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
