--- a/professional.html
+++ b/professional.html
@@ -108,7 +108,7 @@
 </li>
 <li><p>2012, Game Theory, Multi-agents and social algorithm, Thuc Vu - Google Inc, USA.</p>
 </li>
-<li><p>2011, Optimization Models for Engineering, Laurent El Ghaoui - University of California, Bekerley, USA.</p>
+<li><p>2011, Optimization Models for Engineering, Laurent El Ghaoui - University of California, Berkeley, USA.</p>
 </li>
 </ul>
 <h2>Misc</h2>
@@ -125,7 +125,7 @@
 <ul>
 <li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2018-2021.</p>
 </li>
-<li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2014, 2017-2020.</p>
+<li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2014, 2017-2021.</p>
 </li>
 <li><p>International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>): 2019-2021.</p>
 </li>
@@ -169,7 +169,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-11-21 23:58:14 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-12-15 14:51:28 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
