--- a/publication.html
+++ b/publication.html
@@ -23,8 +23,8 @@
 <p>(<font color="red">*</font>: equal contribution)</p>
 <h2>Selected Journals / Conference papers</h2>
 <ul>
-<li><p><a href="https://arxiv.org/pdf/2109.14875.pdf" target=&ldquo;blank&rdquo;><font color="blue">Adversarial Regression with Doubly Non-negative Weighting Matrices</font></a>. <br />
-Neural Information Processing Systems (<b>NeurIPS/NIPS</b>), 2021. (<i>Acceptance rate: 26.0% from 9122 submissions</i>) <br />
+<li><p><a href="https://proceedings.neurips.cc/paper/2021/file/8cfef17bee2b7a75a3ce09d40b497f6b-Paper.pdf" target=&ldquo;blank&rdquo;><font color="blue">Adversarial Regression with Doubly Non-negative Weighting Matrices</font></a>. [<a href="https://proceedings.neurips.cc/paper/2021/file/8cfef17bee2b7a75a3ce09d40b497f6b-Supplemental.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/aenyabi9mq5vk37/TamLe_NeurIPS2021_AdvReg_Slide.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>/<a href="https://www.dropbox.com/s/gbwdqbu5pobpymo/LNBN_NeurIPS21_AdvReg.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
+Neural Information Processing Systems (<b>NeurIPS/NIPS</b>), 2021. (<i>Acceptance rate: 2334/9122=25.6%</i>) <br />
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Makoto Yamada, Jose Blanchet, Viet Anh Nguyen</p>
 </li>
 </ul>
@@ -82,7 +82,7 @@ Machine Learning Journal (<b>MLJ</b>), 2014. <br />
 <ul>
 <li><p><a href="https://arxiv.org/pdf/2102.04014.pdf" target=&ldquo;blank&rdquo;><font color="blue">Point-set Distances for Learning Representations of 3D Point Clouds</font></a> <br />
 International Conference on Computer Vision (<b>ICCV</b>), 2021. (<i>Acceptance rate: 1617/6236 = 25.9%</i>) <br />
-Trung Nguyen, Quang-Hieu Pham, <b>Tam Le</b>, Nhat Ho, Tung Pham, Binh-Son Hua.</p>
+Trung Nguyen, Quang-Hieu Pham, <b>Tam Le</b>, Tung Pham, Nhat Ho, Binh-Son Hua.</p>
 </li>
 </ul>
 <ul>
@@ -159,6 +159,10 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <p><b>Talks</b></p>
 <ul>
+<li><p>2022, an invited speaker at the upcoming AAAI workshop (<a href="https://ot-sdm.github.io/" target=&ldquo;blank&rdquo;>OT-SDM: International Workshop on Optimal Transport and Structured Data Modeling</a>).</p>
+</li>
+<li><p>2021, <font color="blue">Adversarial Regression with Doubly Non-negative Weighting Matrices</font>, <a href="https://www.vinai.io/neuripsworkshop2021" target=&ldquo;blank&rdquo;>VinAI workshop</a>, Virtual. [<a href="https://www.dropbox.com/s/mjovcgfeyogrb30/TamLe_VinAIWorkshopp2021_Adversarial%20Regrerssion.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]</p>
+</li>
 <li><p>2021, <font color="blue">An Introduction on Tree-(Sliced)-Wasserstein Geometry</font>, RIKEN AIP Open Seminar Series, Virtual. [<a href="https://www.dropbox.com/s/6tpdgjy7nqp93gq/TamLe_TW_RIKEN%20Open%20Seminar_FINAL_2021.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]</p>
 </li>
 <li><p>2019, <font color="blue">Kernel methods for Persistence Diagrams: A Geometric Approach</font>, Institute for Advanced Study, Kyoto University, Japan. [<a href="https://www.dropbox.com/s/gejiyhbjfcpfk4t/2019July_TDA_GeometricKernel.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]</p>
@@ -176,7 +180,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-11-21 23:58:14 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-12-15 14:51:28 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
