--- a/professional.html
+++ b/professional.html
@@ -32,6 +32,8 @@
 </ul>
 <p><b>Senior Program Committee</b></p>
 <ul>
+<li><p>International Conference on Machine Learning (<b>ICML</b>): 2022</p>
+</li>
 <li><p>International Joint Conference on Artificial Intelligence (IJCAI): 2021-2022</p>
 </li>
 </ul>
@@ -169,7 +171,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-12-15 14:51:28 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-12-19 10:56:16 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
