--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@ Yoshida Honmachi, Sakyo-ku, Kyoto, 606-8501, Japan.</p>
 My CV is <a href="https://www.dropbox.com/s/1jrgtiaredl1z8b/TamLe-CV-2021Nov.pdf?dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated November, 2021.</p>
 <h2>News</h2>
 <ul>
-<li><p>2022, I will give an invited talk at the upcoming AAAI workshop (<a href="https://ot-sdm.github.io/" target=&ldquo;blank&rdquo;>OT-SDM: International Workshop on Optimal Transport and Structured Data Modeling</a>).</p>
+<li><p>19-Jan-2021, Our paper, entitled <a href="to-be-appeared-soon" target=&ldquo;blank&rdquo;><font>"Sobolev Transport: A Scalable Metric for Probability Measures with Graph Metrics"</font></a>, has been accepted to <a href="https://aistats.org/aistats2022/" target=&ldquo;blank&rdquo;><b>AISTATS&rsquo;22</b></a>! This is joint work with Truyen Nguyen, Dinh Phung, and Viet Anh Nguyen.</p>
 </li>
-<li><p>29-Sep-2021, Our paper, entitled <a href="https://arxiv.org/pdf/2109.14875.pdf" target=&ldquo;blank&rdquo;><font>"Adversarial Regression with Doubly Non-negative Weighting Matrices"</font></a>, has been accepted to <b>NeurIPS&rsquo;21</b>! This is joint work with Truyen Nguyen, Makoto Yamada, Jose Blanchet, and Viet Anh Nguyen.</p>
+<li><p>19-Jan-2022, I will give an invited talk at the upcoming AAAI workshop (<a href="https://ot-sdm.github.io/" target=&ldquo;blank&rdquo;>OT-SDM: International Workshop on Optimal Transport and Structured Data Modeling</a>).</p>
+</li>
+<li><p>29-Sep-2021, Our paper, entitled <a href="https://arxiv.org/pdf/2109.14875.pdf" target=&ldquo;blank&rdquo;><font>"Adversarial Regression with Doubly Non-negative Weighting Matrices"</font></a>, has been accepted to <a href="https://neurips.cc/" target=&ldquo;blank&rdquo;><b>NeurIPS&rsquo;21</b></a>! This is joint work with Truyen Nguyen, Makoto Yamada, Jose Blanchet, and Viet Anh Nguyen.</p>
 </li>
 <li><p>16-Jun-2021, I will be officially promoted to <i>Research Scientist</i> at RIKEN AIP from 01-Aug-2021.</p>
 </li>
@@ -114,7 +116,7 @@ My CV is <a href="https://www.dropbox.com/s/1jrgtiaredl1z8b/TamLe-CV-2021Nov.pdf
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-12-19 10:56:16 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-01-19 10:51:25 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
