--- a/publication.html
+++ b/publication.html
@@ -23,6 +23,13 @@
 <p>(<font color="red">*</font>: equal contribution)</p>
 <h2>Selected Journals / Conference papers</h2>
 <ul>
+<li><p><a href="to-be-appeared-soon" target=&ldquo;blank&rdquo;><font color="blue">Sobolev Transport: A Scalable Metric for Probability Measures with Graph Metrics</font></a> . <br />
+
+International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>), 2022. (<i>Acceptance rate: 492/1685=29.2%</i>) <br /> 
+<b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Dinh Phung, Viet Anh Nguyen</p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://proceedings.neurips.cc/paper/2021/file/8cfef17bee2b7a75a3ce09d40b497f6b-Paper.pdf" target=&ldquo;blank&rdquo;><font color="blue">Adversarial Regression with Doubly Non-negative Weighting Matrices</font></a>. [<a href="https://proceedings.neurips.cc/paper/2021/file/8cfef17bee2b7a75a3ce09d40b497f6b-Supplemental.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/aenyabi9mq5vk37/TamLe_NeurIPS2021_AdvReg_Slide.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>/<a href="https://www.dropbox.com/s/gbwdqbu5pobpymo/LNBN_NeurIPS21_AdvReg.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 Neural Information Processing Systems (<b>NeurIPS/NIPS</b>), 2021. (<i>Acceptance rate: 2334/9122=25.6%</i>) <br />
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Makoto Yamada, Jose Blanchet, Viet Anh Nguyen</p>
@@ -180,7 +187,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-12-19 10:56:16 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-01-19 10:51:26 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
