--- a/professional.html
+++ b/professional.html
@@ -53,7 +53,7 @@
 </li>
 <li><p>Machine Learning Journal (MLJ): 2017(1), 2018(1), 2019(1)</p>
 </li>
-<li><p>Transactions on Pattern Analysis and Machine Intelligence (PAMI): 2021(1)</p>
+<li><p>Transactions on Pattern Analysis and Machine Intelligence (PAMI): 2021(1), 2022(1)</p>
 </li>
 <li><p>International Joint Conference on Artificial Intelligence (IJCAI): 2018-2020</p>
 </li>
@@ -171,7 +171,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-19 10:51:25 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-02-28 17:43:54 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
