--- a/publication.html
+++ b/publication.html
@@ -166,7 +166,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <p><b>Talks</b></p>
 <ul>
-<li><p>2022, an invited speaker at the upcoming AAAI workshop (<a href="https://ot-sdm.github.io/" target=&ldquo;blank&rdquo;>OT-SDM: International Workshop on Optimal Transport and Structured Data Modeling</a>).</p>
+<li><p>2022, <font color="blue">On Scalability of Optimal Transport with Tree\/Graph metric</font>, an invited talk, AAAI workshop (<a href="https://ot-sdm.github.io/" target=&ldquo;blank&rdquo;>OT-SDM: International Workshop on Optimal Transport and Structured Data Modeling</a>), Virtual. <a href="https://www.dropbox.com/s/4l37iw738ivtn0h/TamLe_AAAI22%20Workshop_OTSDM.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a></p>
 </li>
 <li><p>2021, <font color="blue">Adversarial Regression with Doubly Non-negative Weighting Matrices</font>, <a href="https://www.vinai.io/neuripsworkshop2021" target=&ldquo;blank&rdquo;>VinAI workshop</a>, Virtual. [<a href="https://www.dropbox.com/s/mjovcgfeyogrb30/TamLe_VinAIWorkshopp2021_Adversarial%20Regrerssion.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]</p>
 </li>
@@ -187,7 +187,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-19 10:51:26 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-02-28 17:43:54 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
