--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Yoshida Honmachi, Sakyo-ku, Kyoto, 606-8501, Japan.</p>
 My CV is <a href="https://www.dropbox.com/s/1jrgtiaredl1z8b/TamLe-CV-2021Nov.pdf?dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated November, 2021.</p>
 <h2>News</h2>
 <ul>
-<li><p>01-March-2022, I give an invited talk at the AAAI workshop (<a href="https://ot-sdm.github.io/" target=&ldquo;blank&rdquo;>OT-SDM: International Workshop on Optimal Transport and Structured Data Modeling</a>). <a href="https://www.dropbox.com/s/4l37iw738ivtn0h/TamLe_AAAI22%20Workshop_OTSDM.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a></p>
+<li><p>01-March-2022, I give an invited talk at the AAAI workshop (<a href="https://ot-sdm.github.io/" target=&ldquo;blank&rdquo;>OT-SDM: International Workshop on Optimal Transport and Structured Data Modeling</a>). [<a href="https://www.dropbox.com/s/4l37iw738ivtn0h/TamLe_AAAI22%20Workshop_OTSDM.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]</p>
 </li>
 <li><p>19-Jan-2021, Our paper, entitled <a href="to-be-appeared-soon" target=&ldquo;blank&rdquo;><font>"Sobolev Transport: A Scalable Metric for Probability Measures with Graph Metrics"</font></a>, has been accepted to <a href="https://aistats.org/aistats2022/" target=&ldquo;blank&rdquo;><b>AISTATS&rsquo;22</b></a>! This is joint work with Truyen Nguyen, Dinh Phung, and Viet Anh Nguyen.</p>
 </li>
@@ -116,7 +116,7 @@ My CV is <a href="https://www.dropbox.com/s/1jrgtiaredl1z8b/TamLe-CV-2021Nov.pdf
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-28 17:43:54 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-02-28 17:47:00 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
