--- a/publication.html
+++ b/publication.html
@@ -23,7 +23,7 @@
 <p>(<font color="red">*</font>: equal contribution)</p>
 <h2>Selected Journals / Conference papers</h2>
 <ul>
-<li><p><a href="to-be-appeared-soon" target=&ldquo;blank&rdquo;><font color="blue">Sobolev Transport: A Scalable Metric for Probability Measures with Graph Metrics</font></a> . <br />
+<li><p><a href="https://arxiv.org/pdf/2202.10723.pdf" target=&ldquo;blank&rdquo;><font color="blue">Sobolev Transport: A Scalable Metric for Probability Measures with Graph Metrics</font></a> . <br />
 
 International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>), 2022. (<i>Acceptance rate: 492/1685=29.2%</i>) <br /> 
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Dinh Phung, Viet Anh Nguyen</p>
@@ -164,9 +164,11 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 <li><p>Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi, <font color="blue">GridSearch: Complexite et Garantie pour la Validation (GridSearch: Complexity and Guarantee for Validation)</font>. <a href="http://cap2018.litislab.fr/Programme-en.html" target=&ldquo;blank&rdquo;>Conference Sur L'Apprentissage Automatique (CAp)</a>, 2018.</p>
 </li>
 </ul>
-<p><b>Talks</b></p>
+<p><b>Invited Talks</b></p>
 <ul>
-<li><p>2022, <font color="blue">On Scalability of Optimal Transport with Tree/Graph metric</font>, an invited talk, AAAI workshop (<a href="https://ot-sdm.github.io/" target=&ldquo;blank&rdquo;>OT-SDM: International Workshop on Optimal Transport and Structured Data Modeling</a>), Virtual. [<a href="https://www.dropbox.com/s/4l37iw738ivtn0h/TamLe_AAAI22%20Workshop_OTSDM.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]</p>
+<li><p>[Upcoming] 2022, <font color="blue">Geometric Approaches for Persistence Diagrams in Topological Data Analysis</font>, <a href="https://sites.google.com/kyoto-u.ac.jp/apatg" target=&ldquo;blank&rdquo;>Asia Pacific Seminar on Applied Topology and Geometry (APATG)</a>, Virtual.</p>
+</li>
+<li><p>2022, <font color="blue">On Scalability of Optimal Transport with Tree/Graph metric</font>, AAAI workshop (<a href="https://ot-sdm.github.io/" target=&ldquo;blank&rdquo;>OT-SDM: International Workshop on Optimal Transport and Structured Data Modeling</a>), Virtual. [<a href="https://www.dropbox.com/s/4l37iw738ivtn0h/TamLe_AAAI22%20Workshop_OTSDM.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]</p>
 </li>
 <li><p>2021, <font color="blue">Adversarial Regression with Doubly Non-negative Weighting Matrices</font>, <a href="https://www.vinai.io/neuripsworkshop2021" target=&ldquo;blank&rdquo;>VinAI workshop</a>, Virtual. [<a href="https://www.dropbox.com/s/mjovcgfeyogrb30/TamLe_VinAIWorkshopp2021_Adversarial%20Regrerssion.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]</p>
 </li>
@@ -187,7 +189,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-03-04 20:31:52 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-04-14 08:36:48 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
