--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@ Graduate School of Informatics, Kyoto University <br />
 Yoshida Honmachi, Sakyo-ku, Kyoto, 606-8501, Japan.</p>
 </div></div>
 <p>Email: tam.le[<i>at</i>]riken.jp or lttam.vn[<i>at</i>]gmail.com <br />
-My CV is <a href="https://www.dropbox.com/s/1jrgtiaredl1z8b/TamLe-CV-2021Nov.pdf?dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated November, 2021.</p>
+My CV is <a href="https://www.dropbox.com/s/n8rpswe1zj603bt/TamLe2022Apr.pdf?dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated April, 2022.</p>
 <h2>News</h2>
 <ul>
+<li><p>[Upcoming] 27-May-2022, I will give an invited talk at <a href="https://sites.google.com/kyoto-u.ac.jp/apatg" target=&ldquo;blank&rdquo;>Asia Pacific Seminar on Applied Topology and Geometry (APATG)</a>.</p>
+</li>
 <li><p>01-March-2022, I give an invited talk at the AAAI workshop (<a href="https://ot-sdm.github.io/" target=&ldquo;blank&rdquo;>OT-SDM: International Workshop on Optimal Transport and Structured Data Modeling</a>). [<a href="https://www.dropbox.com/s/4l37iw738ivtn0h/TamLe_AAAI22%20Workshop_OTSDM.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]</p>
 </li>
 <li><p>19-Jan-2021, Our paper, entitled <a href="to-be-appeared-soon" target=&ldquo;blank&rdquo;><font>"Sobolev Transport: A Scalable Metric for Probability Measures with Graph Metrics"</font></a>, has been accepted to <a href="https://aistats.org/aistats2022/" target=&ldquo;blank&rdquo;><b>AISTATS&rsquo;22</b></a>! This is joint work with Truyen Nguyen, Dinh Phung, and Viet Anh Nguyen.</p>
@@ -116,7 +118,7 @@ My CV is <a href="https://www.dropbox.com/s/1jrgtiaredl1z8b/TamLe-CV-2021Nov.pdf
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-03-04 20:31:52 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-04-14 08:36:48 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
